--- a/_config.yml
+++ b/_config.yml
@@ -19,26 +19,26 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Blog Title # Make a title for your blog
-email: author_email@email.com # Add your email 
+email: corinnemcclelland@ymail.com # Add your email 
 description: >- # this means to ignore newlines until "baseurl:"
  Change the description so that it describes your blog
 baseurl: "/stat386-projects" # keep this the same or change it to the name of the repository 
-url: "https://esnt.github.io" #  change this to "https://<your-github-username>.github.io"
+url: "https://mcorinne.github.io" #  change this to "https://<your-github-username>.github.io"
 image: "assets/images/image5.jpg"
-author: Your name
-copyright: ABCD # Your initials or what you want the copyright to be.  Leave empty for no copyright
+author: Corinne McClelland
+copyright: CEM # Your initials or what you want the copyright to be.  Leave empty for no copyright
 
 # Social media users names.  Leave fields blank that you don't want displayed
-twitter_username: 386student
-github_username:  386student
-linkedin_username: 386student
+twitter_username: 
+github_username:  mcorinne
+linkedin_username: Corinne McClelland
 dribbble_username: 
-facebook_username: 386student
+facebook_username: 
 flickr_username:
 instagram_username: 
 pinterest_username:
 youtube_username: 
-googleplus_username: 386student
+googleplus_username:
 
 
 # Build settings
