--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Blog Title # Make a title for your blog
+title: StatistiCori # Make a title for your blog
 email: corinnemcclelland@ymail.com # Add your email 
 description: >- # this means to ignore newlines until "baseurl:"
- Change the description so that it describes your blog
+ An undergrad teaching herself (and hopefully you too!) beginner-level data science practices
 baseurl: "/stat386-projects" # keep this the same or change it to the name of the repository 
 url: "https://mcorinne.github.io" #  change this to "https://<your-github-username>.github.io"
 image: "assets/images/image5.jpg"
